--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -4,5 +4,5 @@ server:
 spring:
   data:
     mongodb:
-      uri: mongodb+srv://SivaCodeDemon:java@cluster.1juf6o4.mongodb.net/?retryWrites=true&w=majority
+      uri: your URI
       database: Test
